--- a/docker/fd-dso/jenkins/Dockerfile
+++ b/docker/fd-dso/jenkins/Dockerfile
@@ -14,6 +14,9 @@ COPY config/ca.crt $JAVA_HOME/lib/security
 RUN cd $JAVA_HOME/lib/security `
     && keytool -keystore cacerts -storepass changeit -noprompt -trustcacerts -importcert -alias fddso -file ca.crt
 
+RUN cp $JAVA_HOME/lib/security/ca.crt /usr/local/share/ca-certificates/ca.crt `
+    &&  update-ca-certificates
+
 USER jenkins
 
 
